--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,53 @@
     max-height: calc(100vh - 6rem);
 }
 
-.tiptapeditor {
+.tiptap {
     overflow: scroll;
     max-height: calc(100vh - 3.5rem);
-    padding-top: 3.5rem;
-    padding-left: 3.5rem;
-    outline: none;
+    /* padding-top: 3.5rem; */
+    /* padding-left: 3.5rem; */
+    /* padding-right: 3.5rem; */
+    /* outline: none; */
+    /* background-color: lime; */
+    font-family: 'Inter', sans-serif;
+}
+
+.tiptap h1 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+    font-weight: 700;
+}
+
+.tiptap h2 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
+}
+
+.tiptap h3 {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    font-weight: 500;
+}
+
+.tiptap h4 {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    font-weight: 400;
+}
+
+.tiptap h5 {
+    font-size: 1rem;
+    line-height: 1.5rem;
+}
+
+.tiptap h6 {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+}
+
+.tiptap p {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 400;
 }
